process hardcode